objects/ca2cq_best_answer_to_migrate__c.object
<CustomObject>
    <fields>
        <fullName>Feed_Comment_CreatedById__c</fullName>
        <label>Feed Comment CreatedById</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Comment_Id__c</fullName>
        <label>Feed Comment Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Comment_SelectedById__c</fullName>
        <label>Feed Comment SelectedById</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Item_Id__c</fullName>
        <label>Feed Item Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Id__c</fullName>
        <label>Network Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Best Answer To Migrate</label>
    <nameField>
        <label>Best Answer To Migrate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Best Answers To Migrate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>